--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -20,8 +20,8 @@
         <ul>
           <li>projets</li>
           <li>contact</li>
-          <li>login</li>
-          <li><img src="./assets/icons/instagram.png" alt="Instagram" /></li>
+          <li><a href="login.html">login</a></li>
+          <li><img class="logo-insta"src="./assets/icons/instagram.png" alt="Instagram" /></li>
         </ul>
       </nav>
     </header>
@@ -52,7 +52,7 @@
       <section id="portfolio">
         <h2>Mes Projets</h2>
         <div class="filters">
-          <button id="all">Tous</button>
+          <button id="0">Tous</button>
         </div>
         <div class="gallery"></div>
       </section>
