--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -10,6 +10,7 @@
       href="https://fonts.googleapis.com/css2?family=Syne:wght@700;800&family=Work+Sans&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <meta name="description" content="" />
     <link rel="stylesheet" href="./assets/style.css" />
   </head>
@@ -50,7 +51,7 @@
         </article>
       </section>
       <section id="portfolio">
-        <h2>Mes Projets</h2>
+        <h2>Mes Projets<div id="user-modifier"></div></h2>
         <div class="filters">
           <button id="0">Tous</button>
         </div>
