--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -10,7 +10,13 @@
       href="https://fonts.googleapis.com/css2?family=Syne:wght@700;800&family=Work+Sans&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
+      integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <meta name="description" content="" />
     <link rel="stylesheet" href="./assets/style.css" />
   </head>
@@ -19,10 +25,17 @@
       <h1>Sophie Bluel <span>Architecte d'intérieur</span></h1>
       <nav>
         <ul>
-          <li>projets</li>
-          <li>contact</li>
-          <li><a href="login.html">login</a></li>
-          <li><img class="logo-insta"src="./assets/icons/instagram.png" alt="Instagram" /></li>
+          <li><a href="#">projets</a></li>
+          <li><a href="#">contact</a></li>
+
+          <li><a class="log-in-out" href="login.html">login</a></li>
+          <li>
+            <img
+              class="logo-insta"
+              src="./assets/icons/instagram.png"
+              alt="Instagram"
+            />
+          </li>
         </ul>
       </nav>
     </header>
@@ -51,7 +64,10 @@
         </article>
       </section>
       <section id="portfolio">
-        <h2>Mes Projets<div id="user-modifier"></div></h2>
+        <h2>
+          Mes Projets
+          <div class="user-modifier hidden"></div>
+        </h2>
         <div class="filters">
           <button id="0">Tous</button>
         </div>
@@ -60,7 +76,7 @@
       <section id="contact">
         <h2>Contact</h2>
         <p>Vous avez un projet ? Discutons-en !</p>
-        <form action="#" method="post">
+        <form id="login-form" method="post">
           <label for="name">Nom</label>
           <input type="text" name="name" id="name" />
           <label for="email">Email</label>
@@ -80,5 +96,6 @@
       </nav>
     </footer>
     <script src="script.js"></script>
+    <script src="login.js"></script>
   </body>
 </html>
