--- a/FrontEnd/login.html
+++ b/FrontEnd/login.html
@@ -18,9 +18,9 @@
       <h1>Sophie Bluel <span>Architecte d'intérieur</span></h1>
       <nav>
         <ul>
-          <li>projets</li>
-          <li>contact</li>
-          <li><a href="index.html">login</a></li>
+          <li><a href="#">projets</a></li>
+          <li><a href="#">contact</a></li>
+          <li><a class="log-in-out"   href="index.html">login</a></li>
           <li><img class="logo-insta" src="./assets/icons/instagram.png" alt="Instagram" /></li>
         </ul>
       </nav>
