--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -66,7 +66,7 @@
       <section id="portfolio">
         <h2>
           Mes Projets
-          <div class="user-modifier"></div>
+          <div class="user-modify"></div>
           <article id="modale" class="hidden">
             <div class="modal-gallery"></div>
           </article>
@@ -75,6 +75,7 @@
           <button id="0" class="button">Tous</button>
         </div>
         <div class="gallery"></div>
+        
       </section>
       <section id="contact" class="contact">
         <h2>Contact</h2>
